# adk-2-test

./: .gitignore  README.md  main.py  notes_2026-04-28_23-40-33.txt  pyproject.toml
.claude/: settings.local.json
myagent/: agent.py
second_agent/: agent.py  eval_set_1.evalset.json  eval_set_old.evalset.json  profile.py
second_agent/modules/: filesystem.py  memory.py  summarizer.py
second_agent/plugins/: context_builder.py  context_manager.py  token_tracker.py
second_agent/subagents/: __init__.py  coordinator_agent.py  developer_agent.py  planner_agent.py  verifier_agent.py
second_agent/tools/: linear.py
tests/eval/: README.md  sample_evalset.json
